Fix footer align
change direction justify-content for Ftr container

--- a/css/styles.css
+++ b/css/styles.css
@@ -578,7 +578,7 @@ button {
 /* Footer */
 .footer .container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: baseline;
 }
 
